Failing testing user.spects.ts from controller
